--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1554,155 +1554,155 @@ button:hover {
   position: relative;
 }
 
-  @keyframes rotate {
-    to {
-      --angle: 360deg;
-    }
+@keyframes rotate {
+  to {
+    --angle: 360deg;
   }
+}
 
-  @property --angle {
-    syntax: '<angle>';
-    initial-value: 0deg;
-    inherits: false;
-  }
+@property --angle {
+  syntax: '<angle>';
+  initial-value: 0deg;
+  inherits: false;
+}
 
-  .error {
-    color: red;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    padding: 0;
-    text-align: center;
-  }
+.error {
+  color: red;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  padding: 0;
+  text-align: center;
+}
 
-  .error2 {
-    /* color: white; */
-    margin: 0 0 0 5px;
-    padding: 0;
-    /* text-align: center; */
-  }
+.error2 {
+  /* color: white; */
+  margin: 0 0 0 5px;
+  padding: 0;
+  /* text-align: center; */
+}
 
-  .account-split{
-    display: flex;
-  }
+.account-split{
+  display: flex;
+}
 
-  .account-info-container {
-    min-width: 40%;
-  }
+.account-info-container {
+  min-width: 40%;
+}
 
-  .account-option-container {
-    width: 55%;
-  }
+.account-option-container {
+  width: 55%;
+}
 
-  .account-option-items {
-    margin-top: 20px;
-    width: 47.5vw;
-  }
+.account-option-items {
+  margin-top: 20px;
+  width: 47.5vw;
+}
 
-  .username {
-    color: white;
-    text-decoration: none;
-    margin-right: 15px;
-  }
+.username {
+  color: white;
+  text-decoration: none;
+  margin-right: 15px;
+}
 
-  .username2 {
-    color: white;
-    text-decoration: none;
-  }
+.username2 {
+  color: white;
+  text-decoration: none;
+}
 
-  .footer-copy-right {
-    font-weight: 500;
-    margin-top: 12px;
-  }
+.footer-copy-right {
+  font-weight: 500;
+  margin-top: 12px;
+}
 
-  .card-pool-fill {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-    gap: 10px;
-    grid-auto-flow: dense;
-  }
+.card-pool-fill {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  gap: 10px;
+  grid-auto-flow: dense;
+}
 
-  .card-pool-fill2 {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-    gap: 10px;
-    grid-auto-flow: dense;
-    /* margin-right: 18px; */
-    margin: 0px 18px 18px 18px;
-    opacity: 1;
-    /* max-height: 2000px; */
-    transition: all 0.5s;
-  }
+.card-pool-fill2 {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  gap: 10px;
+  grid-auto-flow: dense;
+  /* margin-right: 18px; */
+  margin: 0px 18px 18px 18px;
+  opacity: 1;
+  /* max-height: 2000px; */
+  transition: all 0.5s;
+}
 
-  .card-pool-fill3 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-flow: dense;
-    /* margin-right: 18px; */
-  }
+.card-pool-fill3 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-flow: dense;
+  /* margin-right: 18px; */
+}
 
-  .card-pool-fill4 {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
-    gap: 10px;
-    grid-auto-flow: dense;
-    /* margin-right: 18px; */
-    justify-self: center;
-    margin: 10px;
-    opacity: 1;
-    /* max-height: 2000px; */
-    transition: all 0.5s;
-  }
+.card-pool-fill4 {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  gap: 10px;
+  grid-auto-flow: dense;
+  /* margin-right: 18px; */
+  justify-self: center;
+  margin: 10px;
+  opacity: 1;
+  /* max-height: 2000px; */
+  transition: all 0.5s;
+}
 
-  .app-container {
-    position: relative;
-  }
+.app-container {
+  position: relative;
+}
 
-  .content {
-    min-height: var(--window-height);
-  }
+.content {
+  min-height: var(--window-height);
+}
 
-  .account-scrollable {
-    margin: 0% 0% 0% .5%;
-    height: var(--window-height-account);
-    overflow-x: hidden;
-    overflow-y: auto;
-    border: 1px solid rgba(0, 0, 0, 0.212);
-    background-color: rgba(15, 0, 50, 0.315);
-    border-radius: 2px;
-    outline: 1px solid rgba(255, 255, 255, 0.3);
-  }
+.account-scrollable {
+  margin: 0% 0% 0% .5%;
+  height: var(--window-height-account);
+  overflow-x: hidden;
+  overflow-y: auto;
+  border: 1px solid rgba(0, 0, 0, 0.212);
+  background-color: rgba(15, 0, 50, 0.315);
+  border-radius: 2px;
+  outline: 1px solid rgba(255, 255, 255, 0.3);
+}
 
-  .half {
-    opacity: 60%;
-  }
+.half {
+  opacity: 60%;
+}
 
-  .selected2 {
-    outline: 5px solid rgb(255, 255, 255);
-  }
+.selected2 {
+  outline: 5px solid rgb(255, 255, 255);
+}
 
-  .glow {
-    filter: brightness(1);
-  }
+.glow {
+  filter: brightness(1);
+}
 
-  .glow:hover {
-    filter: brightness(2);
-  }
+.glow:hover {
+  filter: brightness(2);
+}
 
-  .glow2 {
-    filter: brightness(1);
-  }
+.glow2 {
+  filter: brightness(1);
+}
 
-  .glow2:hover {
-    filter: brightness(1.5);
-  }
+.glow2:hover {
+  filter: brightness(1.5);
+}
 
-  .glow3 {
-    filter: brightness(1);
-  }
+.glow3 {
+  filter: brightness(1);
+}
 
-  .glow3:hover {
-    filter: brightness(1.3);
-  }
+.glow3:hover {
+  filter: brightness(1.3);
+}
 
   /* @keyframes pulse-glow3 {
     0% {
@@ -1716,229 +1716,229 @@ button:hover {
     }
   } */
 
-  .top-row {
-    min-width: 200px;
-    width: 15vw;
-  }
+.top-row {
+  min-width: 200px;
+  width: 15vw;
+}
 
-  .dcbsearch-x-x-large {
-    width: 740px;
-    height: 37px;
-  }
+.dcbsearch-x-x-large {
+  width: 740px;
+  height: 37px;
+}
 
-  .button-fill {
-    display: flex;
-  }
+.button-fill {
+  display: flex;
+}
 
-  .back-button {
-    width: 67px;
-    margin: 5px 5px 5px 7px;
-  }
+.back-button {
+  width: 67px;
+  margin: 5px 5px 5px 7px;
+}
 
-  .between-space {
-    display: flex;
-    justify-content: space-between;
-  }
+.between-space {
+  display: flex;
+  justify-content: space-between;
+}
 
-  .wide40 {
-    width: 40%;
-  }
+.wide40 {
+  width: 40%;
+}
 
-  .wide55 {
-    width: 55%;
-  }
+.wide55 {
+  width: 55%;
+}
 
-  .margin-left-3P {
-    margin-left: 3%;
-  }
+.margin-left-3P {
+  margin-left: 3%;
+}
 
-  .deck-import {
-    margin: 2% 0%;
-    background-color: rgba(0, 255, 200, 0.315);
-    border: 2px solid rgb(0, 99, 77);
-    border-radius: 5px;
-    outline: 1px solid white;
-  }
+.deck-import {
+  margin: 2% 0%;
+  background-color: rgba(0, 255, 200, 0.315);
+  border: 2px solid rgb(0, 99, 77);
+  border-radius: 5px;
+  outline: 1px solid white;
+}
 
-  .deck-import-scrollable {
-    margin: auto;
-    margin-bottom: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    width: 99%;
-    min-height: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.212);
-    background-color: rgba(15, 0, 50, 0.315);
-    border-radius: 2px;
-    outline: 1px solid rgba(255, 255, 255, 0.3);
-  }
+.deck-import-scrollable {
+  margin: auto;
+  margin-bottom: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 99%;
+  min-height: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.212);
+  background-color: rgba(15, 0, 50, 0.315);
+  border-radius: 2px;
+  outline: 1px solid rgba(255, 255, 255, 0.3);
+}
 
-  .black-white {
-    color: var(--color-body)
-  }
+.black-white {
+  color: var(--color-body)
+}
 
-  .black-white:hover {
-    color: var(--color-body)
-  }
+.black-white:hover {
+  color: var(--color-body)
+}
 
-  .table200 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    margin: 0 0 0 20px;
-    border: 1px solid;
-    border-color: var(--color-body);
-    padding: 0px;
-  }
+.table200 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  margin: 0 0 0 20px;
+  border: 1px solid;
+  border-color: var(--color-body);
+  padding: 0px;
+}
 
-  .table200p {
-    margin: 0 0 0 20px;
-    border: 1px solid;
-    border-color: var(--color-body);
-    padding: 0px;
-  }
+.table200p {
+  margin: 0 0 0 20px;
+  border: 1px solid;
+  border-color: var(--color-body);
+  padding: 0px;
+}
 
-  .text-table {
-    font-weight: 600;
-    margin: 5px 20px 5px 20px;
-  }
+.text-table {
+  font-weight: 600;
+  margin: 5px 20px 5px 20px;
+}
 
-  .text-table-2 {
-    font-weight: 600;
-    margin: 5px 20px 0 20px;
-  }
+.text-table-2 {
+  font-weight: 600;
+  margin: 5px 20px 0 20px;
+}
 
-  .support {
-    margin: 2% 0%;
-    background-color: rgba(73, 173, 95, 0.315);
-    border: 2px solid rgb(41, 173, 81);
-    border-radius: 5px;
-    outline: 1px solid white;
-  }
+.support {
+  margin: 2% 0%;
+  background-color: rgba(73, 173, 95, 0.315);
+  border: 2px solid rgb(41, 173, 81);
+  border-radius: 5px;
+  outline: 1px solid white;
+}
 
-  .anti_support {
-    margin: 2% 0%;
-    background-color: rgba(238, 70, 70, 0.315);
-    border: 2px solid rgb(199, 30, 30);
-    border-radius: 5px;
-    outline: 1px solid white;
-  }
+.anti_support {
+  margin: 2% 0%;
+  background-color: rgba(238, 70, 70, 0.315);
+  border: 2px solid rgb(199, 30, 30);
+  border-radius: 5px;
+  outline: 1px solid white;
+}
 
-  .large-article {
-    height: 150px;
-    width: 100%;
-  }
+.large-article {
+  height: 150px;
+  width: 100%;
+}
 
-  .cat-label {
-    text-align: left;
-    margin: 6px 5px 5px 5px;
-    font-weight: 700;
-  }
+.cat-label {
+  text-align: left;
+  margin: 6px 5px 5px 5px;
+  font-weight: 700;
+}
 
-  .no-pad {
-    padding: 0px;
-  }
+.no-pad {
+  padding: 0px;
+}
 
-  .margin-top-93 {
-    margin-top: 93px;
-  }
+.margin-top-93 {
+  margin-top: 93px;
+}
 
-  .margin-left {
-    margin-left: 20px;
-  }
+.margin-left {
+  margin-left: 20px;
+}
 
-  .margin-bottom-0 {
-    margin-bottom: 0px;
-  }
+.margin-bottom-0 {
+  margin-bottom: 0px;
+}
 
-  .navbar {
-    top: 0;
-    height: 66px;
-    width: 100%;
-    padding: 0;
-    background-color: rgb(44, 41, 56);
-    border-bottom: 1px white solid;
-    /* border-bottom: none */
-    position: fixed;
-  }
+.navbar {
+  top: 0;
+  height: 66px;
+  width: 100%;
+  padding: 0;
+  background-color: rgb(44, 41, 56);
+  border-bottom: 1px white solid;
+  /* border-bottom: none */
+  position: fixed;
+}
 
-  .navbar.dark {
-    top: 0;
-    height: 62px;
-    width: 100vw;
-    background-color: rgb(44, 41, 56);
-    border-bottom: 1px white solid;
-  }
+.navbar.dark {
+  top: 0;
+  height: 62px;
+  width: 100vw;
+  background-color: rgb(44, 41, 56);
+  border-bottom: 1px white solid;
+}
 
-  .threebars {
-    height: 40px;
-    margin-right: 15px;
-    cursor: pointer;
-  }
+.threebars {
+  height: 40px;
+  margin-right: 15px;
+  cursor: pointer;
+}
 
-  .nav-main {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
+.nav-main {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
 
-  .nav-button100 {
-    margin: 0;
-    padding: 0;
-  }
+.nav-button100 {
+  margin: 0;
+  padding: 0;
+}
 
-  .animate {
-    opacity: 1;
-    max-height: 1000px;
-    transition: opacity 0.5s, max-height 0.5s;
-  }
+.animate {
+  opacity: 1;
+  max-height: 1000px;
+  transition: opacity 0.5s, max-height 0.5s;
+}
 
-  .wide90p {
-    width: 90%;
-  }
+.wide90p {
+  width: 90%;
+}
 
-  .navbar-menu {
-    display:flex;
-    margin: auto;
-    padding: 0 0 0 10px;
-  }
+.navbar-menu {
+  display:flex;
+  margin: auto;
+  padding: 0 0 0 10px;
+}
 
-  .navbar-menu-item {
-    /* display:block; */
-    margin: auto;
-    padding: 0 10px 0 10px;
-    font-weight: 400;
-    color: white;
-  }
+.navbar-menu-item {
+  /* display:block; */
+  margin: auto;
+  padding: 0 10px 0 10px;
+  font-weight: 400;
+  color: white;
+}
 
-  .nav-dropdown-content {
-    background-color: rgb(80, 74, 102);
-    position: absolute;
-    min-width: 160px;
-    z-index: 9999;
-    top: 66px;
-  }
+.nav-dropdown-content {
+  background-color: rgb(80, 74, 102);
+  position: absolute;
+  min-width: 160px;
+  z-index: 9999;
+  top: 66px;
+}
 
-  .navbar-select {
-    height: 62px;
-    width: auto;
-    display: flex;
-    align-items: center;
-    transition: all 1s;
-  }
+.navbar-select {
+  height: 62px;
+  width: auto;
+  display: flex;
+  align-items: center;
+  transition: all 1s;
+}
 
-  .navbar-select:hover {
-    background-color: rgb(123, 114, 158);
-  }
+.navbar-select:hover {
+  background-color: rgb(123, 114, 158);
+}
 
-  .navbar-selected {
-    height: 62px;
-    width: auto;
-    display: flex;
-    align-items: center;
-    animation: pulse 1.5s infinite;
-  }
+.navbar-selected {
+  height: 62px;
+  width: auto;
+  display: flex;
+  align-items: center;
+  animation: pulse 1.5s infinite;
+}
 
 @keyframes pulse {
   0% {
@@ -1952,118 +1952,220 @@ button:hover {
   }
 }
 
-  .dropdown-select {
-    display: flex;
-    align-items: center;
-    height: 50px;
-    transition: all 1s;
-  }
+.dropdown-select {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  transition: all 1s;
+}
 
-  .dropdown-select:hover {
-    background-color: rgb(180, 166, 233);
-    transition: all 1s;
-  }
+.dropdown-select:hover {
+  background-color: rgb(180, 166, 233);
+  transition: all 1s;
+}
 
-  .accountbuttons {
-    display: flex;
-    margin-right: 10px;
-  }
+.accountbuttons {
+  display: flex;
+  margin-right: 10px;
+}
 
-  .hidden2 {
-    /* opacity: 0;
-    max-height: 0;
-    overflow: hidden;
-    transition: all 0.5s; */
-    display: none;
-  }
+.hidden2 {
+  /* opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.5s; */
+  display: none;
+}
 
-  .cd-title {
-    font-size: 40px;
-    white-space: nowrap;
-  }
+.cd-title {
+  font-size: 40px;
+  white-space: nowrap;
+}
 
-  .cd-title2 {
-    font-size: 35px;
-    white-space: nowrap;
-  }
+.cd-title2 {
+  font-size: 35px;
+  white-space: nowrap;
+}
 
-  .cd-title-container {
-    width: 635px;
-    display: flex;
-    justify-content: center;
-  }
+.cd-title-container {
+  width: 635px;
+  display: flex;
+  justify-content: center;
+}
 
-  .cd-measure {
-    width: fit-content;
-  }
+.cd-measure {
+  width: fit-content;
+}
 
-  .stat-item {
-    width: 145px;
-    margin: auto;
-  }
+.stat-item {
+  width: 145px;
+  margin: auto;
+}
 
-  .play-area {
-    height: 100vh;
-    margin-top: 500px;
-  }
+.play-area {
+  height: 70vh;
+  margin-top: 0px;
+}
 
-  /* .player-mat {
-    width: 900px;
-    position: absolute;
-    z-index: -10;
-    margin: -600px -600px -600px -600px ;
-    top: 206px;
-  } */
+.matCard {
+  height: 196px;
+  width: 140px;
+  outline: 2px solid white;
+  background-color: rgba(0, 0, 0, 0.75);
+  position: relative;
+}
 
-  .matCard {
-    height: 196px;
-    width: 140px;
-    outline: 2px solid white;
-    background-color: rgba(0, 0, 0, 0.75);
-    position: relative;
-  }
+.matCard:hover {
+  height: 196px;
+  width: 140px;
+  animation: pulse2 1.5s infinite;
+}
 
-  .matCard:hover {
-    height: 196px;
-    width: 140px;
-    animation: pulse2 1.5s infinite;
-  }
+.matCardOverlay {
+  height: 196px;
+  width: 140px;
+  outline: 1px solid rgb(255, 255, 255);
+  background-color: rgba(0, 0, 0, 0.486);
+  z-index: 3;
+  position: absolute;
+}
 
-  .matCardOverlay {
-    height: 196px;
-    width: 140px;
-    outline: 1px solid rgb(255, 255, 255);
-    background-color: rgba(0, 0, 0, 0.486);
-    z-index: 3;
-    position: absolute;
-  }
+.matLabel {
+  height: 40px;
+  width: 140px;
+  outline: 2px solid rgb(255, 255, 255);
+  background-color: rgba(107, 107, 107, 0.75);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .matLabel {
-    height: 40px;
-    width: 140px;
-    outline: 2px solid rgb(255, 255, 255);
-    background-color: rgba(107, 107, 107, 0.75);
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.matLabel2 {
+  height: 40px;
+  width: 560px;
+  outline: 2px solid rgb(255, 255, 255);
+  background-color: rgba(107, 107, 107, 0.75);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .matLabel2 {
-    height: 40px;
-    width: 560px;
-    outline: 2px solid rgb(255, 255, 255);
-    background-color: rgba(107, 107, 107, 0.75);
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.field_box {
+  transform: perspective(1000px) rotateX(45deg) scale(.8, .8) translate(150px 20px);
+  align-self: center;
+  position: relative;
+}
 
-  .field_box {
-    transform: perspective(1000px) rotateX(45deg) scale(.8, .8);
-    align-self: center;
-    position: relative;
+.slider_container {
+  height: 20%;
+}
+
+.settings_container {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 0px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  height: 50%;
+  border-radius: 17px;
+  border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.39);
+}
+
+.size_button {
+  /* background-color: rgba(255, 255, 255, 0); */
+  /* border: 1px solid #ccc; */
+  border-radius: 5px;
+  width: 30px;
+  height: 30px;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  user-select:none;
+}
+
+.size_button:hover {
+  cursor: pointer;
+  /* background-color: #ccc; */
+}
+
+.translate_button_container {
+  margin: 10px;
+}
+
+.vertical_container {
+  display: flex;
+  justify-content: center;
+}
+
+.horizontal_container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.translate_button {
+  display: flex;
+  /* background-color: white; */
+  /* border: 1px solid #ccc; */
+  border-radius: 5px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  user-select:none;
+  margin: 5px;
+}
+
+.translate_button:hover {
+  cursor: pointer;
+  /* background-color: #ccc; */
+}
+
+.utf-symbol {
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+}
+
+.utf-symbol2 {
+  color: rgb(255, 255, 255);
+  font-size: 40px;
+}
+
+.flex {
+  display: flex;
+}
+
+.builder-card-hand {
+  width: 115px;
+  margin-right: -30px;
+  border-radius: 5px;
+  overflow: hidden;
+  border: 1px solid white;
+  z-index: 0;
+}
+
+.builder-card-hand:hover {
+  z-index: 20;
+}
+
+.selected3 {
+  outline: 5px solid rgb(255, 0, 0);
+  border: none;
+  z-index: 20;
+}
+
+.card-pool-fill-hand {
+  display: flex;
+  justify-content: center;
 }
 
 @media screen and (max-width: 1330px) {
