--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -418,7 +418,7 @@ button:hover {
   position: relative; /* Make the container a positioning context */
   height: 60vh; /* Ensure the image container takes the full height of the scrollable div */
   /* display: flex; */
-  width: 70vw;
+  width: 45vw;
 }
 
 .inScrollable {
@@ -721,7 +721,7 @@ button:hover {
     filter: brightness(1.5);
   }
   50% {
-    filter: brightness(0.8);
+    filter: brightness(0.5);
   }
   100% {
     filter: brightness(1.5);
@@ -1922,6 +1922,12 @@ button:hover {
   transition: opacity 0.5s, max-height 0.5s;
 }
 
+.animate2 {
+  opacity: 1;
+  max-height: 1000px;
+  transition: opacity 0.5s, max-height 0.5s;
+}
+
 .wide90p {
   width: 90%;
 }
@@ -2005,6 +2011,14 @@ button:hover {
   display: none;
 }
 
+.hidden3 {
+  /* opacity: 0; */
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.5s;
+  /* display: none; */
+}
+
 .cd-title {
   font-size: 40px;
   white-space: nowrap;
@@ -2032,8 +2046,16 @@ button:hover {
 
 .play-area {
   height: 70vh;
-  margin-top: 0px;
+  margin-top: 25px;
   margin-right: -225px;
+  /* margin-bottom: 100px; */
+}
+
+.play-area2 {
+  height: 70vh;
+  margin-top: 50px;
+  margin-right: -225px;
+  margin-bottom: -100px;
 }
 
 .matCard {
@@ -2041,6 +2063,12 @@ button:hover {
   width: 140px;
   outline: 2px solid white;
   background-color: rgba(0, 0, 0, 0.75);
+  position: relative;
+}
+
+.matToggle {
+  height: 196px;
+  width: 140px;
   position: relative;
 }
 
@@ -2330,6 +2358,13 @@ button:hover {
   position: relative;
   margin-bottom: 10px;
   margin-top: -110px;
+}
+
+.discard-menu {
+  width: 140px;
+  position: relative;
+  margin-bottom: 10px;
+  margin-top: -35px;
 }
 
 .card-menu-item {
