--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -728,6 +728,21 @@ button:hover {
   }
 }
 
+@keyframes slide {
+  0% {
+    transform: translate(-1500px, 0);
+  }
+  25% {
+    transform: translate(0, 0);
+  }
+  75% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(1500px, 0);
+  }
+}
+
 
 .add-comp-button {
   margin: 15px 10px 10px 5px;
@@ -2048,17 +2063,22 @@ button:hover {
   margin: auto;
 }
 
+.deckSelect {
+  position: absolute;
+  top: 62px;
+}
+
 .play-area {
   height: 70vh;
   margin-top: 25px;
-  margin-right: -225px;
+  margin-right: -200px;
   /* margin-bottom: 100px; */
 }
 
 .play-area2 {
   height: 70vh;
   margin-top: 50px;
-  margin-right: -225px;
+  margin-right: -200px;
   margin-bottom: -100px;
 }
 
@@ -2135,7 +2155,7 @@ button:hover {
   top: 50%;
   transform: translateY(-50%);
   right: 0px;
-  z-index: 2;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -2348,12 +2368,40 @@ button:hover {
   transition: all 0.5s;
 }
 
+.sim-modal2 {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  border-radius: 5px;
+  outline: 3px solid #ffffff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: fit-content;
+  z-index: 1000;
+  overflow-x: visible;
+  overflow-y: auto;
+  max-height: 80vh;
+  opacity: 10%;
+  transition: all 0.5s;
+}
+
 .sim-modal:hover {
   opacity: 100%;
   transition: all 0.5s;
 }
 
+.sim-modal2:hover {
+  opacity: 100%;
+  transition: all 0.5s;
+}
+
 .margin-5 {
+  margin: 5px;
+}
+
+.margin-10 {
   margin: 10px;
 }
 
@@ -2363,6 +2411,7 @@ button:hover {
   margin-bottom: 10px;
   margin-top: -160px;
   margin-right: -30px;
+  z-index: 3;
 }
 
 .deck-menu {
@@ -2370,6 +2419,41 @@ button:hover {
   position: relative;
   margin-bottom: 10px;
   margin-top: -110px;
+  z-index: 3;
+}
+
+.deck-menu2 {
+  width: 140px;
+  position: relative;
+  margin-top: -25px;
+  margin-left: 10px;
+  z-index: 3;
+}
+
+.deck-menu3 {
+  width: 140px;
+  position: relative;
+  margin-top: -75px;
+  margin-left: 10px;
+  z-index: 3;
+}
+
+.deck-menu2Items {
+  width: 140px;
+  position: relative;
+  margin-top: -50px;
+  margin-left: 10px;
+  z-index: 3;
+}
+
+.deck-menu5Items {
+  width: 140px;
+  position: relative;
+  top: 0;
+  margin-top: -75px;
+  margin-left: 10px;
+  margin-bottom: -50px;
+  z-index: 3;
 }
 
 .discard-menu {
@@ -2377,6 +2461,7 @@ button:hover {
   position: relative;
   margin-bottom: 10px;
   margin-top: -35px;
+  z-index: 3;
 }
 
 .card-menu-item {
@@ -2421,6 +2506,34 @@ button:hover {
 
 .fontSize60 {
   font-size: 60px;
+}
+
+.promptBar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100px;
+  position: absolute;
+  overflow-x: hidden;
+  top: 200px;
+  background-color: rgba(0, 0, 0, 0.733);
+  z-index: 9;
+  transition: all 0.5s;
+}
+
+.promptBar h1{
+  animation: slide 3s infinite;
+}
+
+.noPromptBar {
+  width: 100vw;
+  height: 0;
+  position: absolute;
+  top: 200px;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: -9;
+  transition: all 0.5s;
 }
 
 @media screen and (max-width: 1330px) {
